--- a/hackday.ipynb
+++ b/hackday.ipynb
@@ -2645,6 +2645,20 @@
     "     HistGradientBoostingClassifier(random_state=42, max_leaf_nodes=4))])\n",
     "model"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 49. Tune multiple Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
