Params alterados e logaritmo aplicado no preço

--- a/baseline-staff-mobilitycars-copia.ipynb
+++ b/baseline-staff-mobilitycars-copia.ipynb
@@ -1399,12 +1399,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "846219ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "MAE_tuned3 = cross_validate(xgb_tuned3, X_pp, np.log1p(y), cv=5 , scoring = 'neg_mean_absolute_error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "cd84852b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fit_time': array([126.37681007, 199.88102603, 175.58742714, 108.64087105,\n",
+      "       226.87159967]), 'score_time': array([1.02905607, 1.35946584, 0.72597098, 0.73114896, 1.35124826]), 'test_score': array([-0.19669188, -0.19927124, -0.1984801 , -0.20009569, -0.20035608])}\n",
+      "-0.18043218080667828\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(MAE_tuned3)\n",
+    "print(np.mean(np.expm1(MAE_tuned3['test_score'])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58887fe9",
+   "metadata": {},
+   "source": [
+    "## Modelo 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "a37bb21d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_tuned4 = XGBRegressor(n_estimators= 3000, eta= 0.01, max_depth= 9, subsample= 0.5, colsample_bytree= 0.3, min_child_weight= 3)\n",
+    "\n",
+    "xgb_tuned4.fit(X_pp, np.log1p(y))\n",
+    "\n",
+    "\n",
+    "# X_test_pp = te.transform(df_test.drop(columns=['ID']))\n",
+    "# X_test_pp = X_test_pp.fillna(0)\n",
+    "\n",
+    "pred4_log = xgb_tuned4.predict(X_test_pp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85638830",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred4 = np.expm1(pred4_log)\n",
+    "\n",
+    "df_final = pd.concat([df_test[['ID']], pd.Series(pred4, name='preco')], axis=1)\n",
+    "df_final.head()\n",
+    "\n",
+    "df_final.to_csv('submission4.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2eaf083",
+   "metadata": {},
+   "source": [
+    "## Random Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ae53725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "params = {\n",
+    "    'n_estimators':[1500, 1750, 2000],\n",
+    "    'min_child_weight':[2,3,4,5], \n",
+    "    'gamma':[i/10.0 for i in range(1,6)],\n",
+    "    'subsample':[i/10.0 for i in range(7,13)],\n",
+    "    'colsample_bytree':[i/10.0 for i in range(1,8)], \n",
+    "    'max_depth': [6,7,8,9],\n",
+    "    'objective': ['reg:squarederror', 'reg:tweedie'],\n",
+    "    'booster': ['gbtree', 'gblinear'],\n",
+    "    'eval_metric': ['rmse'],\n",
+    "    'eta': [i/10.0 for i in range(1,6)],\n",
+    "}\n",
+    "\n",
+    "reg = XGBRegressor(nthread=-1)\n",
+    "\n",
+    "# run randomized search\n",
+    "# n_iter_search = 100\n",
+    "n_iter_search = 10\n",
+    "random_search = RandomizedSearchCV(reg, param_distributions=params,\n",
+    "                                   n_iter=n_iter_search, cv=5, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "start = time.time()\n",
+    "random_search.fit(X_pp, np.log1p(y))\n",
+    "print(\"RandomizedSearchCV took %.2f seconds for %d candidates\"\n",
+    "      \" parameter settings.\" % ((time.time() - start), n_iter_search))\n"
    ]
   },
   {
