Relatórios com Sweetviz

--- a/baseline-staff-mobilitycars-copia.ipynb
+++ b/baseline-staff-mobilitycars-copia.ipynb
@@ -1293,7 +1293,7 @@
    "id": "8445d576",
    "metadata": {},
    "source": [
-    "## Modelo 3: Parametros do 1 com log(preco)"
+    "# Modelo 3: Parametros do 1 com log(preco)"
    ]
   },
   {
@@ -1433,7 +1433,7 @@
    "id": "58887fe9",
    "metadata": {},
    "source": [
-    "## Modelo 4"
+    "# Modelo 4"
    ]
   },
   {
@@ -1518,37 +1518,112 @@
    "id": "a82ed5af",
    "metadata": {},
    "source": [
-    "## Sweetviz"
+    "# Sweetviz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d6711879",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import sweetviz as sv"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "f07bb3bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv('datasets/treino.csv')\n",
+    "df_test = pd.read_csv('datasets/teste.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "02f3d027",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sweetviz'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/tt/llj5w1r9581_51t096p4160h0000gn/T/ipykernel_18341/2484308545.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0msweetviz\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sweetviz'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Done! Use 'show' commands to display/save.   |██████████| [100%]   00:02 -> (00:00 left)                      \n"
      ]
     }
    ],
    "source": [
-    "import sweetviz as sv"
+    "# Gerando relatorio  \n",
+    "relatorio = sv.analyze(df_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bc2bbdc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Report relatorio.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gerando o relatorio em html \n",
+    "relatorio.show_html('relatorio.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f0f08cd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Done! Use 'show' commands to display/save.   |██████████| [100%]   00:04 -> (00:00 left)                      \n"
+     ]
+    }
+   ],
+   "source": [
+    "#my_report = sv.compare([df_train, \"Training Data\"], [df_test, \"Test Data\"], \"Survived\", feature_config)\n",
+    "my_report = sv.compare([df_train, \"Training Data\"], [df_test, \"Test Data\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a892371d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Report relatorio_comp.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_report.show_html('relatorio_comp.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29257b0e",
+   "metadata": {},
+   "source": [
+    "## Aplicando Count Encoder"
    ]
   },
   {
